# Plonky3-recursion

./: .gitignore  404.html  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  benchmark.html  bibliography.html  circuit_building.html  construction.html  debugging.html  deny.toml  extensions.html  index.html  introduction.html  log.txt  print.html  searchindex.js  toc.html  toc.js  trace_generation.html
.cargo/: config.toml  katex-header.html
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature.yml  task.yml
.github/scripts/: perf_gate.sh
.github/workflows/: audit.yml  book.yml  ci.yml  coverage.yml  deny.yml  issue-auto-label.yml  issue-rfc-enforcer.yml  perf-gate.yml  pr-labeler.yml
advanced_topics/: debugging.html  scaling.html  soundness.html
appendix/: benchmark.html  glossary.html  roadmap.html
architecture_and_internals/: circuit_building.html  construction.html  hashing.html  lookups.html
book/: book.toml
book/src/: README.md  SUMMARY.md  benchmark.md  bibliography.bib  circuit_building.md  construction.md  extensions.md  hashing.md  trace_generation.md
book/src/advanced_topics/: debugging.md  scaling.md  soundness.md
book/src/appendix/: benchmark.md  glossary.md  roadmap.md
book/src/architecture_and_internals/: circuit_building.md  construction.md  hashing.md  lookups.md
book/src/getting_started/: examples.md  introduction.md  quick_start.md
book/src/user_guide/: aggregation.md  api.md  configuration.md  integration.md  low_level_api.md  public_inputs.md
challenger-air/: Cargo.toml
circuit/: Cargo.toml
circuit-prover/: Cargo.toml
circuit-prover/.cargo/: katex-header.html
circuit-prover/benches/: prover.rs
circuit-prover/examples/: fake_merkle_verify.rs  fibonacci.rs  hash_chain.rs  mmcs_verify.rs  poseidon2_perm_chain.rs  poseidon2_perm_merkle.rs  poseidon_perm_chain.rs  poseidon_perm_merkle.rs
circuit-prover/src/: batch_stark_prover.rs  common.rs  config.rs  field_params.rs  lib.rs  prover.rs
circuit-prover/src/air/: add_air.rs  alu_air.rs  alu_columns.rs  const_air.rs  ext_mul_air.rs  fake_merkle_air.rs  mod.rs  mul_air.rs  public_air.rs  recompose_air.rs  sample_bits_air.rs  sub_air.rs  test_utils.rs  utils.rs  witness_air.rs
circuit-prover/src/batch_stark_prover/: dynamic_air.rs  packing.rs  poseidon2.rs  recompose.rs  tests.rs
circuit-prover/tests/: npo_integration.rs
circuit/benches/: runner_traces.rs
circuit/examples/: allocation_log.rs
circuit/src/: alloc_entry.rs  builder.rs  circuit.rs  errors.rs  expr.rs  lib.rs  op.rs  policy.rs  tables.rs  test_utils.rs  types.rs  utils.rs  witness_table.rs
circuit/src/builder/: circuit_builder.rs  config.rs  errors.rs  expression_builder.rs  mod.rs  npo.rs  public_input_tracker.rs
circuit/src/builder/compiler/: expression_lowerer.rs  mod.rs  non_primitive_lowerer.rs  optimizer.rs
circuit/src/builder/compiler/lowerer/: tests.rs
circuit/src/builder/compiler/optimizer/: analysis.rs  dedup.rs  fuse_bool_check.rs  fuse_mul_add.rs  mod.rs
circuit/src/ops/: context.rs  executor.rs  fri.rs  hash.rs  merkle.rs  mmcs.rs  mod.rs  npo.rs  op.rs  poseidon2_perm.rs  poseidon_perm.rs  recompose.rs
circuit/src/ops/poseidon2_perm/: builder.rs  call.rs  config.rs  executor.rs  input_resolver.rs  mod.rs  plugin.rs  state.rs  trace.rs
circuit/src/symbolic/: compiler.rs  mod.rs
circuit/src/tables/: add.rs  alu.rs  constant.rs  mmcs.rs  mod.rs  mul.rs  poseidon2.rs  public.rs  runner.rs  witness.rs
coverage/: index.html
docs/rfcs/: 0000-rfc-template.md  0001-rfc-handle-multiplicities.md  0002-rfc-witness-removal.md
field-air/: Cargo.toml
fri-air/: Cargo.toml
getting_started/: examples.html  introduction.html  quick_start.html
interpolation-air/: Cargo.toml
merkle-tree-air/: Cargo.toml
merkle-tree-air/src/: air.rs  lib.rs
mmcs-air/: Cargo.toml
mmcs-air/src/: air.rs  lib.rs
poseidon2-circuit-air/: Cargo.toml
poseidon2-circuit-air/src/: air.rs  columns.rs  lib.rs  public_types.rs  sub_builder.rs
recursion/: Cargo.toml
recursion/examples/: recursive_aggregation.rs  recursive_fibonacci.rs  recursive_keccak.rs
recursion/examples/common/: mod.rs
recursion/src/: challenger_perm.rs  challenges.rs  circuit_challenger.rs  circuit_fri_verifier.rs  circuit_verifier.rs  generation.rs  lib.rs  prelude.rs  public_inputs.rs  recursion.rs  recursive_challenger.rs  recursive_generation.rs  recursive_pcs.rs  recursive_traits.rs
recursion/src/backend/: fri.rs  mod.rs
recursion/src/challenger/: circuit.rs
recursion/src/pcs/: mmcs.rs  mod.rs
recursion/src/pcs/fri/: mod.rs  params.rs  targets.rs  verifier.rs
recursion/src/traits/: air.rs  challenger.rs  mod.rs  pcs.rs  recursive.rs
recursion/src/types/: challenges.rs  mod.rs  proof.rs  selectors.rs
recursion/src/verifier/: batch_stark.rs  mod.rs  observable.rs  quotient.rs  stark.rs
recursion/tests/: aggregation_different_shapes.rs  air_symbolic_to_circuit.rs  challenger_transcript.rs  fibonacci.rs  fibonacci_batch_stark_prover.rs  fibonacci_batch_stark_prover_zk.rs  fri.rs  goldilocks.rs  mul_air.rs  poseidon_perm.rs  preprocessing.rs  test_lookups.rs  zk_aggregation.rs
recursion/tests/common/: mod.rs
scripts/: benchmark.sh  profiling.sh
src/: lib.rs
symmetric-air/: Cargo.toml
symmetric-air/src/: lib.rs
symmetric-air/src/sponge_air/: air.rs  columns.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs
user_guide/: aggregation.html  api.html  configuration.html  integration.html  low_level_api.html  public_inputs.html
