[workspace.package]
description = "Plonky3 native support for recursive proof composition"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Plonky3/Plonky3-recursion"
homepage = "https://github.com/Plonky3/Plonky3-recursion"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky3"]
categories = ["cryptography::cryptocurrencies"]

[workspace]
members = [
    "challenger-air",
    "field-air",
    "fri-air",
    "interpolation-air",
    "merkle-tree-air",
    "recursion",
    "symmetric-air",
]

[workspace.dependencies]

# Local dependencies
p3-challenger-air = { path = "challenger-air", version = "0.1.0" }
p3-field-air = { path = "field-air", version = "0.1.0" }
p3-fri-air = { path = "fri-air", version = "0.1.0" }
p3-interpolation-air = { path = "interpolation-air", version = "0.1.0" }
p3-merkle-tree-air = { path = "merkle-tree-air", version = "0.1.0" }
p3-recursion = { path = "recursion", version = "0.1.0" }
p3-symmetric-air = { path = "symmetric-air", version = "0.1.0" }

[profile.profiling]
inherits = "release"
debug = true
