
[workspace]
resolver = "2"
members = [
    "challenger-air",
    "circuit",
    "circuit-prover",
    "field-air",
    "fri-air",
    "interpolation-air",
    "poseidon2-circuit-air",
    "recursion",
    "symmetric-air",
    "test-utils",
]

[workspace.package]
description = "Plonky3 native support for recursive proof composition"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Plonky3/Plonky3-recursion"
homepage = "https://github.com/Plonky3/Plonky3-recursion"
keywords = ["cryptography", "SNARK", "PLONK", "FRI", "plonky3"]
categories = ["cryptography::cryptocurrencies"]

[workspace.lints]
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unused_must_use = "deny"
rust.rust_2024_incompatible_pat = "warn"
rustdoc.all = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

# Some pedantic lints
semicolon_if_nothing_returned = "warn"
match_bool = "warn"
needless_pass_by_value = "warn"

redundant_pub_crate = "allow"
too_long_first_doc_paragraph = "allow"
unused_peekable = "allow"
tuple_array_conversions = "allow"
transmute_undefined_repr = "allow"
cognitive_complexity = "allow"

[workspace.dependencies]
# Plonky3 dependencies - shared across all crates
p3-air = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-baby-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-batch-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-challenger = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-circle = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-commit = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-dft = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-field = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-fri = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-goldilocks = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-keccak = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-keccak-air = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-koala-bear = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-lookup = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-matrix = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-maybe-rayon = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-merkle-tree = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-poseidon2 = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-poseidon2-air = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-symmetric = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-uni-stark = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }
p3-util = { git = "https://github.com/Plonky3/Plonky3", rev = "f932d765" }

p3-test-utils = { path = "test-utils", version = "0.1.0" }

# Other common dependencies
clap = { version = "4.5", features = ["derive"] }
hashbrown = "0.16.0"
itertools = { version = "0.14.0", default-features = false, features = [
    "use_alloc",
] }
proptest = { version = "1.5", default-features = true }
rand = { version = "0.10.0", default-features = false }
serde = { version = "1.0", default-features = false, features = [
    "derive",
    "alloc",
] }
strum = { version = "0.28.0", default-features = false }
strum_macros = "0.27.2"
thiserror = { version = "2.0", default-features = false }
tracing = { version = "0.1.37", default-features = false, features = [
    "attributes",
] }
tracing-forest = "0.3.0"
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
    "alloc",
] }

# Local dependencies
p3-challenger-air = { path = "challenger-air", version = "0.1.0" }
p3-circuit = { path = "circuit", version = "0.1.0" }
p3-circuit-prover = { path = "circuit-prover", version = "0.1.0" }
p3-field-air = { path = "field-air", version = "0.1.0" }
p3-fri-air = { path = "fri-air", version = "0.1.0" }
p3-interpolation-air = { path = "interpolation-air", version = "0.1.0" }
p3-poseidon2-circuit-air = { path = "poseidon2-circuit-air", version = "0.1.0" }
p3-recursion = { path = "recursion", version = "0.1.0" }
p3-symmetric-air = { path = "symmetric-air", version = "0.1.0" }

[profile.profiling]
inherits = "release"
debug = true
