[package]
name = "p3-circuit-prover"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

# Display math equations properly in documentation
[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", ".cargo/katex-header.html"]

[dependencies]
itertools.workspace = true
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-batch-stark.workspace = true
p3-challenger.workspace = true
p3-circle.workspace = true
p3-circuit.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-fri.workspace = true
p3-goldilocks.workspace = true
p3-keccak.workspace = true
p3-koala-bear.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-merkle-tree.workspace = true
p3-mmcs-air.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true
rand.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
postcard = { version = "1.0", default-features = false, features = ["alloc"] }
rand.workspace = true
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }

[features]
parallel = ["p3-maybe-rayon/parallel"]

[[example]]
name = "fibonacci"
path = "examples/fibonacci.rs"
