[package]
name = "p3-circuit"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]

# Plonky3 dependencies
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-field.workspace = true
p3-goldilocks.workspace = true
p3-keccak.workspace = true
p3-koala-bear.workspace = true
p3-matrix.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true
rand.workspace = true

# Other common dependencies
hashbrown = "0.16.0"
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-fri.workspace = true
p3-matrix.workspace = true
p3-merkle-tree.workspace = true
p3-symmetric.workspace = true

rand.workspace = true
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }
