[package]
name = "p3-recursion"
description.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
# Plonky3 dependencies
p3-air.workspace = true
p3-batch-stark.workspace = true
p3-challenger.workspace = true
p3-circuit-prover.workspace = true
p3-commit.workspace = true
p3-field.workspace = true
p3-fri.workspace = true
p3-lookup.workspace = true
p3-matrix.workspace = true
p3-merkle-tree.workspace = true
p3-symmetric.workspace = true
p3-uni-stark.workspace = true
p3-util.workspace = true

# Other dependencies
hashbrown.workspace = true
itertools.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Local dependencies
p3-circuit.workspace = true

[dev-dependencies]
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-challenger.workspace = true
p3-dft.workspace = true
p3-goldilocks.workspace = true
p3-koala-bear.workspace = true
p3-matrix.workspace = true
p3-poseidon2.workspace = true
p3-poseidon2-air.workspace = true
p3-poseidon2-circuit-air.workspace = true
p3-util.workspace = true
proptest.workspace = true
rand.workspace = true
tracing-forest = { workspace = true, features = ["ansi", "smallvec"] }
tracing-subscriber = { workspace = true, features = ["std", "env-filter"] }

[lints]
workspace = true
