[package]
name = "p3-test-utils"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Test utilities for Plonky3 recursion crates"

[dependencies]
p3-air.workspace = true
p3-baby-bear.workspace = true
p3-batch-stark.workspace = true
p3-field.workspace = true
p3-lookup.workspace = true
p3-matrix.workspace = true
p3-uni-stark.workspace = true
